first tag stage of application
