# docs/swagger.json
@@ -42,7 +42,58 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/guild/pg": {
+            "post": {
+                "description": "Insert one pg",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Guild"
+                ],
+                "summary": "Insert one pg",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "pg",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/custom.ExampleBodyPg"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/custom.Created"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/custom.BadRequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/custom.NotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/custom.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/guild/usr": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -61,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/custom.ExampleBody"
+                            "$ref": "#/definitions/custom.ExampleBodyUser"
                         }
                     }
                 ],
@@ -157,41 +208,11 @@
         "custom.Created": {
             "type": "object",
             "properties": {
-                "body": {
-                    "$ref": "#/definitions/models.User"
-                },
                 "code": {
                     "type": "integer",
                     "example": 201
                 },
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "custom.ExampleBody": {
-            "type": "object",
-            "required": [
-                "battle_tag",
-                "name",
-                "pg",
-                "surname",
-                "username"
-            ],
-            "properties": {
-                "battle_tag": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "pg": {
-                    "$ref": "#/definitions/custom.ExampleBodyPg"
-                },
-                "surname": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
@@ -202,11 +223,14 @@
                 "class",
                 "name",
                 "rank",
-                "tier_set_pieces"
+                "tiersetpieces"
             ],
             "properties": {
                 "class": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -214,8 +238,34 @@
                 "rank": {
                     "type": "string"
                 },
-                "tier_set_pieces": {
+                "tiersetpieces": {
                     "type": "integer"
+                }
+            }
+        },
+        "custom.ExampleBodyUser": {
+            "type": "object",
+            "required": [
+                "battle_tag",
+                "name",
+                "surname",
+                "username"
+            ],
+            "properties": {
+                "battle_tag": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -261,14 +311,11 @@
                 "class",
                 "name",
                 "rank",
-                "tier_set_pieces"
+                "tiersetpieces"
             ],
             "properties": {
                 "class": {
                     "type": "string"
-                },
-                "class_id": {
-                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -279,12 +326,15 @@
                 "rank": {
                     "type": "string"
                 },
-                "tier_set_pieces": {
+                "tiersetpieces": {
                     "type": "integer",
                     "maximum": 4
                 },
                 "user_id": {
                     "type": "integer"
+                },
+                "user_username": {
+                    "type": "string"
                 }
             }
         },
